# teext

./: README.md  check_all.sh  make_release.py  make_release.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tee.constraints.html  teext.constraints.html
docs/_sources/: index.rst.txt
docsource/: conf.py  index.rst  tee.constraints.rst  teext.constraints.rst
tee/: constraints.py
teext/: __init__.py  constraints.py  lib.py  lib.pyi  optional.py  result.py
tests/: constraints_test.py  dacite_test.py  optional_test.py  result_test.py  util.py
