[tool.black]
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
warn_unreachable = true
disallow_any_unimported = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_incomplete_stub = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pytest.*"]
ignore_missing_imports = true

[tool.isort]
known_third_party = []
known_future_library = []
extra_standard_library = ["__future__", "typing_extensions"]
profile = "black"
force_sort_within_sections = "True"

[tool.poetry]
name = "teext"
version = "0.1.4"
description = "Typing extensions extensions"
authors = ["Thomas MK <tmke@posteo.net>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
  { include = "teext" },
]
include=["teext/py.typed"]
classifiers=[
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
