[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teext"
dynamic = ["version"]
description = "Typing extensions extensions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Thomas MK", email = "tmke@posteo.net" },
]
keywords = [
    "python",
    "typing",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
dependencies = [
    "typing_extensions >= 4.4.0",
]

[project.urls]
Homepage = "https://github.com/wearepal/teext"

# dev dependencies
[tool.hatch.envs.default]
dependencies = [
    "black~=22.10",
    "isort~=5.10",
    "mypy>=0.982",
    "pytest~=7.1",
]

[tool.hatch.version]
path = "teext/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/teext",
]

[tool.hatch.build.targets.wheel]
artifacts = [
  "*.so",
]

# compile `lip.py` with mypyc
[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = ["hatch-mypyc"]
include = ["/teext/lib.py"]
mypy-args = [
  "--strict",
  "--disallow-untyped-defs",
]

[tool.black]
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
strict = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
warn_unreachable = true
disallow_any_unimported = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_incomplete_stub = true
show_error_codes = true
implicit_reexport = false

[[tool.mypy.overrides]]
module = ["pytest.*"]
ignore_missing_imports = true

[tool.isort]
known_third_party = []
known_future_library = []
extra_standard_library = ["__future__", "typing_extensions"]
profile = "black"
force_sort_within_sections = "True"
